--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ button * {
     transition: linear .2s;
 }
 
+main {
+    margin-bottom: 30px;
+}
+
 .container {
 
     width: 100%;
@@ -32,8 +36,10 @@ button * {
 }
 
 .row {
-display: flex;
-flex-wrap: wrap;
+
+    display: flex;
+
+    flex-wrap: wrap;
 }
 
 /* header */
@@ -251,7 +257,6 @@ header .col-md-6 {
 }
 
 .player-area .player-elements {
-    display: none;
 }
 
 .content-sec {}
@@ -613,32 +618,144 @@ header .col-md-6 {
     font-size: 20px;
     line-height: 23px;
     color: #131D29;
+    margin-bottom: 15px;
+    align-items: center;
 }
 
-.playlist-title input {}
+.playlist-title input {
+    display: none;
+}
+
+.playlist-title span {
+    display: inline-block;
+    width: 38px;
+    height: 18px;
+    border-radius: 20px;
+    vertical-align: middle;
+    transition: 0.25s 0.09s;
+    position: relative;
+    background: #deeff7;
+    cursor: pointer;
+}
+
+.playlist-title span:after {
+    content: " ";
+    display: block;
+    width: 16px;
+    height: 16px;
+    top: 1px;
+    left: 1px;
+    border-radius: 50%;
+    background: #fff;
+    position: absolute;
+    transition: 0.2s;
+    box-shadow: 0px 0.1px 0.3px #0000001a, 0px 1px 2px #00000033;
+}
+
+.playlist-title input:checked+span {
+    background: #34C759;
+}
+
+.playlist-title input:checked+span+span {
+    color: #29316b;
+}
+
+.playlist-title input:checked+span:after {
+    transform: translateX(20px);
+}
 
 .playlist-items {
     list-style: none;
 }
 
-.playlist-item {}
+.playlist-item {
+    margin-bottom: 15px;
+    box-sizing: border-box;
+    background: #FFFFFF;
+    border-radius: 4px;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+}
 
-.playlist-item .list-tn {}
+.playlist-item:last-child {
+    margin-bottom: 0;
+}
 
-.playlist-item .list-tn img {}
+.playlist-item .list-tn {
+    line-height: 0;
+    width: 168px;
+    margin-right: 18px;
+}
 
-.playlist-item .video-summary {}
+.playlist-item .list-tn img {
+    width: 100%;
+    border-radius: 4px;
+    height: 100%;
+    object-fit: cover;
+}
 
-.playlist-item .video-summary h3 {}
+.playlist-item .video-summary {
+    width: calc(100% - 186px);
+}
 
-.playlist-item .chanel-summary {}
+.playlist-item .video-summary h3 {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+    color: #131D29;
+    margin-bottom: 20px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    -webkit-line-clamp: 2;
+}
 
-.playlist-item .chanel-summary img {}
+.playlist-item .chanel-summary {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    margin-bottom: 20px;
+}
 
-.playlist-item .chanel-summary p {}
+.playlist-item .chanel-summary img {
+    height: 27px;
+    width: 27px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 12px;
+}
 
-.playlist-item .video-mata {}
+.playlist-item .chanel-summary p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+    color: #7F7F91;
+}
 
-.playlist-item .video-mata li {}
+.playlist-item .video-mata {
+    list-style: none;
+    line-height: 0;
+}
 
-.playlist-item .video-mata li img {}
+.playlist-item .video-mata li {
+    display: inline-flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+    color: #7F7F91;
+    margin-right: 36.5px;
+}
+
+.playlist-item .video-mata li:last-child {
+    margin-right: 0;
+}
+
+.playlist-item .video-mata li img {
+    width: 15px;
+    margin-right: 6.5px;
+}
