--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ header .col-md-6 {
 }
 
 .header-content .notifi button {
-    background: #FFFFFF;
+    background-color: #FFFFFF;
     border: 1px solid #F3F3F3;
     border-radius: 4px;
     background-image: url(../images/notification-icon.svg);
@@ -92,6 +92,19 @@ header .col-md-6 {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 18px;
+    position: relative;
+}
+
+.header-content .notifi button::before {
+    content: "";
+    background-color: #33B959;
+    height: 5.5px;
+    width: 5.5px;
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    top: 8px;
+    right: 13px;
 }
 
 .user-short-info {
@@ -128,7 +141,18 @@ header .col-md-6 {
 }
 
 .header-content .toggle {}
-
+.header-content .toggle button{
+    background: #0095FF;
+    border-radius: 2px;
+    border: none;
+    line-height: 0;
+    padding: 11px 10px;
+    margin-left: 10px;
+}
+.header-content .toggle button svg{
+    width: 6px;
+    height: 20px;
+}
 
 /* Search bar */
 .search-sec {
@@ -203,12 +227,14 @@ header .col-md-6 {
     color: #7F7F91;
 }
 
-.search-area {}
+.search-area {
+    width: 400px;
+    position: relative;
+}
 
 .search-box {}
 
 .search-box form {
-    width: 400px;
     position: relative;
 }
 
@@ -241,7 +267,64 @@ header .col-md-6 {
 }
 
 .search-area .search-sugg {
+    background: #FFFFFF;
+    box-shadow: 24px 40px 62px #00000040;
+    border-radius: 4px;
+    position: absolute;
+    z-index: 3;
+    top: 60px;
+    left: 0;
+    right: 0;
     display: none;
+    transition: linear .3s;
+}
+
+.search-area:focus-within .search-sugg {
+    top: 50px;
+    display: block;
+}
+
+.search-sugg .search-sugg-option {
+    padding: 18px;
+    border-bottom: 1px solid #0000000d;
+}
+
+.search-sugg .search-sugg-option p {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    display: flex;
+    align-items: center;
+    color: #131D29;
+    margin-bottom: 13px;
+}
+
+.search-sugg .search-sugg-option ul {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: row;
+    gap: 8px;
+}
+
+.search-sugg .search-sugg-option ul li {
+    display: inline-flex;
+}
+
+.search-sugg .search-sugg-option ul li a {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 11px;
+    color: #0095FF;
+    text-decoration: none;
+    background-color: #EDF8FF;
+    padding: 12px 13px;
+    border-radius: 30px;
+}
+
+.search-sugg .search-sugg-option:last-child {
+    border-bottom: none;
 }
 
 .player-sec {
@@ -249,17 +332,160 @@ header .col-md-6 {
     margin-bottom: 20px;
 }
 
-.player-area {}
+.player-area {
+    position: relative;
+}
 
 .player-area iframe {
     width: 100%;
     height: 90vh;
 }
 
-.player-area .player-elements {
+.player-play {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 11;
 }
 
-.content-sec {}
+.player-play button {
+    line-height: 0;
+    background: #ffffffc9;
+    mix-blend-mode: normal;
+    border: none;
+    height: 58px;
+    width: 58px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 7px #ffffff66;
+}
+
+.player-play button svg {}
+
+.player-area .player-elements {
+    background: linear-gradient(180deg, #0e424b00 4.64%, #000b13e3 100%);
+    padding: 105px 30px 45px 30px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.player-elements .progess-bar {
+    border-radius: 6px;
+    height: 5px;
+    background: #ffffff80;
+    position: relative;
+    margin-bottom: 42px;
+}
+
+.player-elements .progess-bar::after {
+    content: "";
+    position: absolute;
+    background: #0095FF;
+    border-radius: 6px;
+    left: 0;
+    width: 55%;
+    bottom: 0;
+    top: 0;
+}
+
+.player-elements .progess-bar span {
+    height: 9px;
+    width: 9px;
+    display: inline-block;
+    background-color: #0095FF;
+    border-radius: 50%;
+    position: absolute;
+    left: calc(55% - 11px);
+    border: 7px solid #FFFFFF;
+    box-shadow: 0 0 0 2px #0095FF;
+    top: 50%;
+    transform: translate(0, -50%);
+    z-index: 2;
+    cursor: pointer;
+}
+
+.player-options {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.player-options .timer {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    color: #FFFFFF;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    width: 150px;
+}
+
+.player-options .timer .sound {
+    line-height: 0;
+    margin-right: 25px;
+    border: none;
+    background-color: transparent;
+}
+
+.player-options .timer .sound svg {
+    width: 24px;
+}
+
+.player-options .timer .timer-run {
+    margin-right: 5px;
+}
+
+.player-options .timer .timer-total {
+    margin-left: 5px;
+}
+
+.player-options .controller {}
+
+.player-options .controller ul {
+    list-style: none;
+    display: flex;
+    width: 150px;
+    justify-content: space-between;
+}
+
+.player-options .controller ul li {
+    line-height: 0;
+    display: inline-flex;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.player-options .controller ul li button {
+    border: 0;
+    background-color: transparent;
+    line-height: 0;
+}
+
+.player-options .controller ul li button svg {}
+
+.player-options .settings ul {
+    display: flex;
+    width: 150px;
+    justify-content: flex-end;
+    gap: 37px;
+}
+
+.player-options .settings ul li {
+    list-style: none;
+    display: inline-flex;
+}
+
+.player-options .settings ul li button {
+    border: 0;
+    background-color: transparent;
+    line-height: 0;
+}
+
+.player-options .settings ul li button svg {}
 
 .content-sec .row {
     width: 100%;
@@ -295,6 +521,13 @@ header .col-md-6 {
     line-height: 18px;
     display: inline-flex;
     padding-top: 10px;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.content-sec .content-details .title .time img {
+    width: 15px;
+    margin-right: 9.5px;
 }
 
 .content-sec .content-details .channel-info {
@@ -317,6 +550,13 @@ header .col-md-6 {
     line-height: 18px;
     color: #131D29;
     padding: 10px 15px;
+}
+
+.content-sec .content-details .channel-info .like-btn button svg {
+    width: 16px;
+    margin-right: 9px;
+    margin-bottom: -3px;
+    margin-left: 2px;
 }
 
 .content-sec .content-details .video-description {
@@ -432,7 +672,8 @@ header .col-md-6 {
     cursor: pointer;
     position: absolute;
     right: 10px;
-    bottom: 10px;
+    top: 50%;
+    transform: translate(0, -50%);
 }
 
 .video-comment-box .comment-area form button img {
