--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,8 @@ header .col-md-6 {
 
 .user-short-info {
     display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
 }
 
 .user-short-info .user-img {
@@ -152,6 +154,13 @@ header .col-md-6 {
 .header-content .toggle button svg{
     width: 6px;
     height: 20px;
+}
+
+header.header-md{
+    display: block;
+}
+header.header-sm{
+    display: none;
 }
 
 /* Search bar */
@@ -653,7 +662,7 @@ header .col-md-6 {
     font-size: 16px;
     padding: 12px 15px;
     box-sizing: border-box;
-    min-height: 57px;
+    height: 57px;
     padding-right: 125px;
 }
 
@@ -877,6 +886,7 @@ header .col-md-6 {
     position: relative;
     background: #deeff7;
     cursor: pointer;
+    margin-left: 16px;
 }
 
 .playlist-title span:after {
@@ -999,4 +1009,12 @@ header .col-md-6 {
 .playlist-item .video-mata li img {
     width: 15px;
     margin-right: 6.5px;
+}
+
+.breadcrumb-sm{
+    display: none;
+}
+
+.video-comment-box-sm{
+    display: none;
 }
