--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,13 +1,3 @@
-/* // `sm` applies to x-small devices (portrait phones, less than 576px) */
-@media (max-width: 575.98px) {}
-
-
-
-/* // `lg` applies to medium devices (tablets, less than 992px) */
-
-/* // `xl` applies to large devices (desktops, less than 1200px) */
-@media (max-width: 1199.98px) {}
-
 /* // `xxl` applies to x-large devices (large desktops, less than 1400px) */
 @media (max-width: 1399.98px) {
     .container {
@@ -33,6 +23,7 @@
     }
 }
 
+/* // `lg` applies to medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
     .content-sec .content-details {
         width: 100% !important;
@@ -51,8 +42,10 @@
     .playlist-item .video-summary {
         width: calc(100% - 186px);
     }
-    .search-area{
-        width: 340px;
+
+    .search-area {
+
+        width: 340px;
     }
 }
 
@@ -73,7 +66,7 @@
 
     .breadcrumb-sm {
         display: block;
-        background-color: #FFFFFF;
+        background-color: var(--color-white);
         padding-top: 5px;
         padding-bottom: 16px;
     }
@@ -114,7 +107,7 @@
     }
 
     .search-sec {
-        background-color: #FFFFFF;
+        background-color: var(--color-white);
     }
 
     .breadcrumb-sm .row {
@@ -312,7 +305,7 @@
 
     .video-comment-box-sm {
         display: block;
-        background-color: #FFFFFF;
+        background-color: var(--color-white);
         margin-top: 10px;
         padding: 16px;
     }
